--- a/Odevler/Bitirme Css/index.html
+++ b/Odevler/Bitirme Css/index.html
@@ -4,32 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Document</title>
   </head>
   <body>
     <nav>
       <div class="logo">
         <div class="logoimg">
-          <img src="img/shutterstock_2148722347 [Dönüştürülmüş]-02.png"logo" />
+          <img
+            src="img/shutterstock_2148722347 [Dönüştürülmüş]-02.png"
+            alt="logo"
+          />
         </div>
       </div>
       <div class="navlinks">
         <ul>
           <li><a class="active" href="#home">Home</a></li>
           <li><a href="#news">News</a></li>
-          <li><a href="#contact">Contact</a></li>
           <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
     </nav>
-    <div class="containerbody">
+    <div class="containerbody" id="home">
       <div class="hero-image">
         <div class="hero-text">
-          <h1>I am John Doe</h1>
-          <p>And I'm a Photographer</p>
+          <h1>I am Ozan</h1>
+          <p>And I'm a Frontend Developer and Designer</p>
         </div>
       </div>
-      <div class="jobdesc">
+      <div class="jobdesc" id="news">
         <div class="text">
           <h1>Designer, Frontend Developer</h1>
           <h5>
@@ -46,15 +56,91 @@
           <img src="img/çalışan bilgisayarlı.png" alt="#" />
         </div>
       </div>
-      <div class="about-me">
-        <div class="text">
+      <div class="about-me" id="about">
+        <div class="text2">
           <h3>Hi I'm Ozan. Nice to meet you.</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit,
-            officiis, dignissimos aut deleniti doloribus tempore perspiciatis
-            praesentium ipsa magni tempora ab dolores itaque reiciendis
-            adipisci.
+            Since beginning my journey as a freelance designer over 2 years ago,
+            I've done remote work for agencies, and collaborated with talented
+            people to create digital products for both business and consumer
+            use. I'm quietly confident, naturally curious, and perpetually
+            working on improving my chops one design problem at a time.
           </p>
+        </div>
+      </div>
+      <div class="row-card">
+        <div class="card2">
+          <div class="icon-cont">
+            <i class="fa-solid fa-wand-magic-sparkles"></i>
+          </div>
+          <div class="card-text">
+            <h2>Designer</h2>
+            <p>
+              <br />
+              I value simple content structure, clean design patterns, and
+              thoughtful interactions.
+            </p>
+            <br />
+            <h4>Things I Enjoy Designing:</h4>
+            <p>UX, UI, Web, Apps, Logos</p>
+            <h4>Design Tools:</h4>
+            <p>
+              Adobe AI <br />Figma <br />
+              Font Awesome<br />
+              Adobe XD <br />
+            </p>
+          </div>
+        </div>
+        <div class="card2">
+          <div class="icon-cont">
+            <i class="fa-solid fa-code"></i>
+          </div>
+          <div class="card-text">
+            <h2>Frontend Developer</h2>
+            <br />
+            <p>
+              I like to code things from scratch, and enjoy bringing ideas to
+              life in the browser.
+            </p>
+            <br />
+            <h4>Languages I Speak:</h4>
+            <p>HTML, CSS, Javascript, React, Redux</p>
+            <h4>Dev Tools:</h4>
+            <p>
+              Atom <br />Visual Studio Code <br />
+              Github <br />
+              Bootstrap <br />
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="logoend" id="contact">
+        <img
+          src="img/shutterstock_2148722347 [Dönüştürülmüş]-02.png"
+          alt="logo"
+        />
+      </div>
+      <p>Living, learning, & leveling up one day at a time.</p>
+      <div class="logos">
+        <div class="logo6">
+          <i class="fa-brands fa-twitter"></i>
+        </div>
+        <div class="logo6">
+          <i class="fa-brands fa-instagram"></i>
+        </div>
+        <div class="logo6">
+          <i class="fa-brands fa-linkedin"></i>
+        </div>
+        <div class="logo6">
+          <i class="fa-brands fa-dribbble"></i>
+        </div>
+        <div class="logo6">
+          <i class="fa-brands fa-facebook"></i>
+        </div>
+        <div class="logo6">
+          <i class="fa-brands fa-whatsapp"></i>
         </div>
       </div>
     </div>
