--- a/28.ders/Bitirme Şablon/index.html
+++ b/28.ders/Bitirme Şablon/index.html
@@ -17,7 +17,10 @@
     <nav>
       <div class="logo">
         <div class="logoimg">
-          <img src="img/shutterstock_2148722347-02.png" alt="logo" />
+          <img
+            src="img/shutterstock_2148722347 [Dönüştürülmüş]-02.png"
+            alt="logo"
+          />
         </div>
       </div>
       <div class="navlinks">
@@ -44,10 +47,13 @@
           </h5>
         </div>
         <div class="image">
-          <img src="img/shutterstock_689558812-02.png" alt="#" />
+          <img
+            src="img/shutterstock_689558812 [Dönüştürülmüş]-02.png"
+            alt="#"
+          />
         </div>
         <div class="image1">
-          <img src="img/calisan_bilgisayarli.png" alt="#" />
+          <img src="img/çalışan bilgisayarlı.png" alt="#" />
         </div>
       </div>
       <div class="about-me" id="about">
@@ -70,13 +76,19 @@
           <div class="card-text">
             <h2>Designer</h2>
             <p>
+              <br />
               I value simple content structure, clean design patterns, and
               thoughtful interactions.
             </p>
+            <br />
             <h4>Things I Enjoy Designing:</h4>
             <p>UX, UI, Web, Apps, Logos</p>
             <h4>Design Tools:</h4>
-            <p>Adobe AI<br />Figma<br />Font Awesome<br />Adobe XD</p>
+            <p>
+              Adobe AI <br />Figma <br />
+              Font Awesome<br />
+              Adobe XD <br />
+            </p>
           </div>
         </div>
         <div class="card2">
@@ -85,30 +97,51 @@
           </div>
           <div class="card-text">
             <h2>Frontend Developer</h2>
+            <br />
             <p>
               I like to code things from scratch, and enjoy bringing ideas to
               life in the browser.
             </p>
+            <br />
             <h4>Languages I Speak:</h4>
             <p>HTML, CSS, Javascript, React, Redux</p>
             <h4>Dev Tools:</h4>
-            <p>Atom<br />Visual Studio Code<br />Github<br />Bootstrap</p>
+            <p>
+              Atom <br />Visual Studio Code <br />
+              Github <br />
+              Bootstrap <br />
+            </p>
           </div>
         </div>
       </div>
     </div>
     <div class="footer">
       <div class="logoend" id="contact">
-        <img src="img/shutterstock_2148722347-02.png" alt="logo" />
+        <img
+          src="img/shutterstock_2148722347 [Dönüştürülmüş]-02.png"
+          alt="logo"
+        />
       </div>
       <p>Living, learning, & leveling up one day at a time.</p>
       <div class="logos">
-        <div class="logo6"><i class="fa-brands fa-twitter"></i></div>
-        <div class="logo6"><i class="fa-brands fa-instagram"></i></div>
-        <div class="logo6"><i class="fa-brands fa-linkedin"></i></div>
-        <div class="logo6"><i class="fa-brands fa-dribbble"></i></div>
-        <div class="logo6"><i class="fa-brands fa-facebook"></i></div>
-        <div class="logo6"><i class="fa-brands fa-whatsapp"></i></div>
+        <div class="logo6">
+          <i class="fa-brands fa-twitter"></i>
+        </div>
+        <div class="logo6">
+          <i class="fa-brands fa-instagram"></i>
+        </div>
+        <div class="logo6">
+          <i class="fa-brands fa-linkedin"></i>
+        </div>
+        <div class="logo6">
+          <i class="fa-brands fa-dribbble"></i>
+        </div>
+        <div class="logo6">
+          <i class="fa-brands fa-facebook"></i>
+        </div>
+        <div class="logo6">
+          <i class="fa-brands fa-whatsapp"></i>
+        </div>
       </div>
     </div>
   </body>
