--- a/Odevler/Bitirme Css/index.html
+++ b/Odevler/Bitirme Css/index.html
@@ -30,6 +30,18 @@
       </div>
     </nav>
     <div class="containerbody" id="home">
+      <div class="animation">
+        <div class="block-text">
+          <div class="block-effect">
+            <div class="block-reveal">UI/UX Design</div>
+            <div class="block-reveal">Web Development</div>
+          </div>
+        </div>
+        <div class="block-image">
+          <img src="img/shutterstock_2148722347-02.png" alt="logo" />
+        </div>
+      </div>
+
       <div class="hero-image">
         <div class="hero-text">
           <h1>I am Ozan</h1>
@@ -54,11 +66,12 @@
         <div class="text2">
           <h3>Hi I'm Ozan. Nice to meet you.</h3>
           <p>
-            Since beginning my journey as a freelance designer over 2 years ago,
-            I've done remote work for agencies, and collaborated with talented
-            people to create digital products for both business and consumer
-            use. I'm quietly confident, naturally curious, and perpetually
-            working on improving my chops one design problem at a time.
+            Since beginning my journey as a freelance developer over 2 years
+            ago, I've done remote work for agencies, and collaborated with
+            talented people to create digital products for both business and
+            consumer use. I'm quietly confident, naturally curious, and
+            perpetually working on improving my chops one design problem at a
+            time.
           </p>
         </div>
       </div>
